fix autozoom in input on iOS

--- a/index.css
+++ b/index.css
@@ -537,6 +537,7 @@ i[class*="van-type-"] {
    font-family: "Inter", sans-serif;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
    font-weight: 400;
+   font-size: 1rem;
 }
 
 .login-form > input:focus {
